Workaround for nexus-staging problem with Java 16+
- Issue recorded
- add-opens