@@ -60,6 +60,12 @@ else
 fi
 
 echo "#5. Deploy release."
+# Workaround for https://issues.sonatype.org/browse/OSSRH-66257
+export MAVEN_OPTS="
+--add-opens=java.base/java.util=ALL-UNNAMED
+--add-opens=java.base/java.lang.reflect=ALL-UNNAMED
+--add-opens=java.base/java.text=ALL-UNNAMED
+--add-opens=java.desktop/java.awt.font=ALL-UNNAMED"
 mvn nexus-staging:release
 
 echo "#6. Finishing."
